lhl merge with xww

--- a/extensions/ohif-i18n/src/locales/zh/Buttons.json
+++ b/extensions/ohif-i18n/src/locales/zh/Buttons.json
@@ -18,7 +18,8 @@
   "Invert": "灰度反转",
   "Layout": "显示窗口",
   "Length": "长度",
-  "Levels": "层级",
+  "ScaleOverlay": "比例尺",
+  "Levels": "明暗",
   "Magnify": "放大镜",
   "Manual": "手动",
   "Measurements": "测量",
